@@ -1098,6 +1098,105 @@ name|endInclusive
 argument_list|)
 return|;
 block|}
+annotation|@
+name|Override
+DECL|method|getRegexpQuery
+specifier|protected
+name|Query
+name|getRegexpQuery
+parameter_list|(
+name|String
+name|field
+parameter_list|,
+name|String
+name|termStr
+parameter_list|)
+throws|throws
+name|ParseException
+block|{
+if|if
+condition|(
+name|field
+operator|==
+literal|null
+condition|)
+block|{
+name|List
+argument_list|<
+name|BooleanClause
+argument_list|>
+name|clauses
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|BooleanClause
+argument_list|>
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|fields
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|clauses
+operator|.
+name|add
+argument_list|(
+operator|new
+name|BooleanClause
+argument_list|(
+name|getRegexpQuery
+argument_list|(
+name|fields
+index|[
+name|i
+index|]
+argument_list|,
+name|termStr
+argument_list|)
+argument_list|,
+name|BooleanClause
+operator|.
+name|Occur
+operator|.
+name|SHOULD
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|getBooleanQuery
+argument_list|(
+name|clauses
+argument_list|,
+literal|true
+argument_list|)
+return|;
+block|}
+return|return
+name|super
+operator|.
+name|getRegexpQuery
+argument_list|(
+name|field
+argument_list|,
+name|termStr
+argument_list|)
+return|;
+block|}
 comment|/**    * Parses a query which searches on the fields specified.    *<p>    * If x fields are specified, this effectively constructs:    *<pre>    *<code>    * (field1:query1) (field2:query2) (field3:query3)...(fieldx:queryx)    *</code>    *</pre>    * @param matchVersion Lucene version to match; this is passed through to QueryParser.    * @param queries Queries strings to parse    * @param fields Fields to search on    * @param analyzer Analyzer to use    * @throws ParseException if query parsing fails    * @throws IllegalArgumentException if the length of the queries array differs    *  from the length of the fields array    */
 DECL|method|parse
 specifier|public
