@@ -150,6 +150,20 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|index
+operator|.
+name|Term
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|search
 operator|.
 name|BooleanClause
@@ -182,6 +196,20 @@ name|lucene
 operator|.
 name|search
 operator|.
+name|BooleanQuery
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
 name|IndexSearcher
 import|;
 end_import
@@ -197,6 +225,20 @@ operator|.
 name|search
 operator|.
 name|Query
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|RegexpQuery
 import|;
 end_import
 
@@ -2285,6 +2327,109 @@ name|reader
 argument_list|)
 return|;
 block|}
+block|}
+DECL|method|testSimpleRegex
+specifier|public
+name|void
+name|testSimpleRegex
+parameter_list|()
+throws|throws
+name|ParseException
+block|{
+name|String
+index|[]
+name|fields
+init|=
+operator|new
+name|String
+index|[]
+block|{
+literal|"a"
+block|,
+literal|"b"
+block|}
+decl_stmt|;
+name|MultiFieldQueryParser
+name|mfqp
+init|=
+operator|new
+name|MultiFieldQueryParser
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+name|fields
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|BooleanQuery
+name|bq
+init|=
+operator|new
+name|BooleanQuery
+argument_list|(
+literal|true
+argument_list|)
+decl_stmt|;
+name|bq
+operator|.
+name|add
+argument_list|(
+operator|new
+name|RegexpQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"a"
+argument_list|,
+literal|"[a-z][123]"
+argument_list|)
+argument_list|)
+argument_list|,
+name|Occur
+operator|.
+name|SHOULD
+argument_list|)
+expr_stmt|;
+name|bq
+operator|.
+name|add
+argument_list|(
+operator|new
+name|RegexpQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"b"
+argument_list|,
+literal|"[a-z][123]"
+argument_list|)
+argument_list|)
+argument_list|,
+name|Occur
+operator|.
+name|SHOULD
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|bq
+argument_list|,
+name|mfqp
+operator|.
+name|parse
+argument_list|(
+literal|"/[a-z][123]/"
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
